feat: complete member and viewer services